force-app/main/default/objects/Account/fields/Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Date__c</fullName>
    <description>Date consultant becomes active</description>
    <inlineHelpText>Date consultant becomes active</inlineHelpText>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>