force-app/main/default/objects/Account/fields/All_Lost_Sales__c.field-meta.xml
<CustomField>
    <fullName>All_Lost_Sales__c</fullName>
    <label>All Lost Sales</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>