force-app/main/default/objects/Account/fields/Annual_Usage_kwh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage_kwh__c</fullName>
    <label>Annual Usage (kwh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>