force-app/main/default/objects/Account/fields/Assignment_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Assignment_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Assignment From Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>