force-app/main/default/objects/Account/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Billing address city name</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>