force-app/main/default/objects/Account/fields/Billing_Class__c.field-meta.xml
<CustomField>
    <fullName>Billing_Class__c</fullName>
    <label>Billing Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>