force-app/main/default/objects/Account/fields/Billing_Zip_Code_4__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code_4__c</fullName>
    <description>Billing address zip code + 4</description>
    <label>Billing Zip Code+4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>