force-app/main/default/objects/Account/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <description>Providers that removed by this customer</description>
    <label>Blacklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>