force-app/main/default/objects/Account/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>