force-app/main/default/objects/Account/fields/Current_Business__c.field-meta.xml
<CustomField>
    <fullName>Current_Business__c</fullName>
    <label>Current Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Both Gas and Electric</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>