force-app/main/default/objects/Account/fields/Current_Plan_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Expiration__c</fullName>
    <description>The expiration date of a customer&#39;s non-CES-enrolled plan.</description>
    <inlineHelpText>The expiration date of a customer&#39;s non-CES-enrolled plan.</inlineHelpText>
    <label>Current Electric Contract Expiration</label>
    <type>Date</type>
</CustomField>