force-app/main/default/objects/Account/fields/Database_Check__c.field-meta.xml
<CustomField>
    <fullName>Database_Check__c</fullName>
    <description>system.  contains the database ids that have contracts activated.  workflow will review the database id fields and determine if any need to be initialized for safari sync</description>
    <inlineHelpText>system.  contains the database ids that have contracts activated.  workflow will review the database id fields and determine if any need to be initialized for safari sync</inlineHelpText>
    <label>Database Check</label>
    <length>30</length>
    <type>Text</type>
</CustomField>