force-app/main/default/objects/Account/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>DBA name (for a business)</description>
    <inlineHelpText>DBA name (for a business)</inlineHelpText>
    <label>DBA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>