force-app/main/default/objects/Account/fields/Default_consultant_unit_fee__c.field-meta.xml
<CustomField>
    <fullName>Default_consultant_unit_fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Per Dth default rate</description>
    <inlineHelpText>Per Dth default rate</inlineHelpText>
    <label>Default consultant unit fee</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>