force-app/main/default/objects/Account/fields/GA_Content__c.field-meta.xml
<CustomField>
    <fullName>GA_Content__c</fullName>
    <label>GA Content</label>
    <length>50</length>
    <type>Text</type>
</CustomField>