force-app/main/default/objects/Account/fields/GA_Medium__c.field-meta.xml
<CustomField>
    <fullName>GA_Medium__c</fullName>
    <label>GA Medium</label>
    <length>50</length>
    <type>Text</type>
</CustomField>