force-app/main/default/objects/Account/fields/HOU_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_ID__c</fullName>
    <description>safari</description>
    <externalId>true</externalId>
    <inlineHelpText>safari</inlineHelpText>
    <label>HOU ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>