force-app/main/default/objects/Account/fields/HOU_Secondary_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>HOU_Secondary_Credit_Type__c</fullName>
    <description>used for safari multi-database syncing of one field</description>
    <formula>TEXT(Secondary_Credit_Type__c)</formula>
    <label>HOU Secondary Credit Type</label>
    <type>Text</type>
</CustomField>