force-app/main/default/objects/Account/fields/HOU_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>HOU_SIC_Code__c</fullName>
    <description>used for safari multi-database syncing of one field</description>
    <formula>Sic</formula>
    <label>HOU SIC Code</label>
    <type>Text</type>
</CustomField>