force-app/main/default/objects/Account/fields/Introduced__c.field-meta.xml
<CustomField>
    <fullName>Introduced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TrueCost has been presented to this REP</description>
    <inlineHelpText>TrueCost has been presented to this REP</inlineHelpText>
    <label>Introduced</label>
    <type>Checkbox</type>
</CustomField>