force-app/main/default/objects/Account/fields/Last_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity__c</fullName>
    <description>for testing DLRS only for now</description>
    <inlineHelpText>for testing DLRS only for now</inlineHelpText>
    <label>Last Opportunity</label>
    <type>Date</type>
</CustomField>