force-app/main/default/objects/Account/fields/Less_than_6_months__c.field-meta.xml
<CustomField>
    <fullName>Less_than_6_months__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Electric plans with term lengths less than 6 months.</description>
    <inlineHelpText>Electric plans with term lengths less than 6 months.</inlineHelpText>
    <label>Less than 6 months</label>
    <type>Checkbox</type>
</CustomField>