force-app/main/default/objects/Account/fields/LIVE_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>LIVE_DUNS_Number__c</fullName>
    <description>used for safari multi-database syncing of one field</description>
    <formula>DUNS_Number__c</formula>
    <label>LIVE DUNS Number</label>
    <type>Text</type>
</CustomField>