force-app/main/default/objects/Account/fields/LIVE_Name__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Name__c</fullName>
    <description>safari_live specific name</description>
    <inlineHelpText>safari_live specific name.  only enter if name is different than other databases.</inlineHelpText>
    <label>LIVE Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>