force-app/main/default/objects/Account/fields/LIVE_Secondary_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Secondary_Credit_Type__c</fullName>
    <description>used for safari multi-database syncing of one field</description>
    <formula>TEXT(Secondary_Credit_Type__c)</formula>
    <label>LIVE Secondary Credit Type</label>
    <type>Text</type>
</CustomField>