force-app/main/default/objects/Account/fields/Meter_Data_Email_Daily__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Email_Daily__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer wants daily email of meter data.</description>
    <inlineHelpText>Customer wants daily email of meter data.</inlineHelpText>
    <label>Meter Data Email Daily</label>
    <type>Checkbox</type>
</CustomField>