force-app/main/default/objects/Account/fields/Meter_Data_Email_None__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Email_None__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer has indicated they want no meter data emails</description>
    <inlineHelpText>Customer has indicated they want no meter data emails</inlineHelpText>
    <label>Meter Data Email None</label>
    <type>Checkbox</type>
</CustomField>