force-app/main/default/objects/Account/fields/Meter_Permission_Date__c.field-meta.xml
<CustomField>
    <fullName>Meter_Permission_Date__c</fullName>
    <label>Meter Permission Date</label>
    <type>DateTime</type>
</CustomField>