force-app/main/default/objects/Account/fields/Minimum_Suspense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Suspense_Amount__c</fullName>
    <label>Minimum Suspense Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>