force-app/main/default/objects/Account/fields/MPLS_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Insurance_Number__c</fullName>
    <description>used for safari multi-database syncing of one field</description>
    <formula>Insurance_Number__c</formula>
    <label>MPLS Insurance Number</label>
    <type>Text</type>
</CustomField>