force-app/main/default/objects/Account/fields/MPLS_Name__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Name__c</fullName>
    <description>safari_mpls specific name.</description>
    <inlineHelpText>safari_mpls specific name.  only enter if name is different than other databases.</inlineHelpText>
    <label>MPLS Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>