force-app/main/default/objects/Account/fields/MPLS_Primary_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Primary_Credit_Type__c</fullName>
    <description>used for safari multi-database syncing of one field</description>
    <formula>TEXT(Primary_Credit_Type__c)</formula>
    <label>MPLS Primary Credit Type</label>
    <type>Text</type>
</CustomField>