force-app/main/default/objects/Account/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>All payment due dates are either the day of the month following production, or two months following production.</description>
    <inlineHelpText>All payment due dates are either the day of the month following production, or two months following production.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25th of the month</fullName>
            </value>
            <value>
                <fullName>27th of the month</fullName>
            </value>
            <value>
                <fullName>28th of the month</fullName>
            </value>
            <value>
                <fullName>1st day of two months</fullName>
            </value>
            <value>
                <fullName>3rd day of two months</fullName>
            </value>
            <value>
                <fullName>5th day of two months</fullName>
            </value>
            <value>
                <fullName>8th day of two months</fullName>
            </value>
            <value>
                <fullName>10th day of two months</fullName>
            </value>
            <value>
                <fullName>11th day of two months</fullName>
            </value>
            <value>
                <fullName>Last day of the month</fullName>
            </value>
            <value>
                <fullName>LDM - Group A</fullName>
            </value>
            <value>
                <fullName>LDM - Group B</fullName>
            </value>
            <value>
                <fullName>LDM - Allocations</fullName>
            </value>
            <value>
                <fullName>LDM - Approvals Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>