force-app/main/default/objects/Account/fields/Price_weight__c.field-meta.xml
<CustomField>
    <fullName>Price_weight__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Weighting factor of plan price.</description>
    <inlineHelpText>Weighting factor of plan price.</inlineHelpText>
    <label>Price weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>