force-app/main/default/objects/Account/fields/Primary_Safari_LIVE_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Safari_LIVE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Safari LIVE Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Safari LIVE Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>