force-app/main/default/objects/Account/fields/Primary_Safari_LIVE_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Safari_LIVE_Contact_Email__c</fullName>
    <formula>Primary_Safari_LIVE_Contact__r.Email</formula>
    <label>Primary Safari LIVE Contact Email</label>
    <type>Text</type>
</CustomField>