force-app/main/default/objects/Account/fields/Primary_Safari_MPLS_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Safari_MPLS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Safari MPLS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Safari MPLS Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>