force-app/main/default/objects/Account/fields/Primary_Safari_STL_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Safari_STL_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Safari STL Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Safari STL Contact)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>