force-app/main/default/objects/Account/fields/Primary_Safari_STL_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Safari_STL_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Safari STL Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>