force-app/main/default/objects/Account/fields/Safari_STL_Needs_Sync__c.field-meta.xml
<CustomField>
    <fullName>Safari_STL_Needs_Sync__c</fullName>
    <formula>AND(
  NOT(ISBLANK(STL_ID__c)),
  OR(
    CONTAINS(TEXT(Safari_STL_Sync_Status__c), &#39;Pending&#39;),
    TEXT(Safari_STL_Sync_Status__c) == &#39;Sending SalesForce ID&#39;
  )
)</formula>
    <label>Safari STL Needs Sync</label>
    <type>Checkbox</type>
</CustomField>