force-app/main/default/objects/Account/fields/Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Name__c</fullName>
    <description>Second name for the account.  Could be same name, contact person/authorized representative for a business, or spouse.</description>
    <inlineHelpText>Second name for the account.  Could be same name, contact person/authorized representative for a business, or spouse.</inlineHelpText>
    <label>Second Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>