force-app/main/default/objects/Account/fields/UF_Name_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Insurance_Amount__c</fullName>
    <formula>&#39;Insurance Amount&#39;</formula>
    <label>UF Name - Insurance Amount</label>
    <type>Text</type>
</CustomField>