force-app/main/default/objects/Account/fields/UF_Name_Primary_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Primary_Credit_Limit__c</fullName>
    <formula>&#39;Other Security 1 Amount&#39;</formula>
    <label>UF Name - Primary Credit Limit</label>
    <type>Text</type>
</CustomField>