force-app/main/default/objects/Account/fields/UF_Name_Primary_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>UF_Name_Primary_Credit_Type__c</fullName>
    <formula>&#39;Other Security&#39;</formula>
    <label>UF Name - Primary Credit Type</label>
    <type>Text</type>
</CustomField>