force-app/main/default/objects/Account/fields/UF_Value_MPLS_Special_Care__c.field-meta.xml
<CustomField>
    <fullName>UF_Value_MPLS_Special_Care__c</fullName>
    <formula>IF(MPLS_Special_Care_Credit__c == true, &#39;Yes&#39;, &#39;No&#39;)</formula>
    <label>UF Value - MPLS Special Care</label>
    <type>Text</type>
</CustomField>