force-app/main/default/objects/Account/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <label>Unique ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>