force-app/main/default/objects/Account/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <description>Web source from the original lead</description>
    <label>Web Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>