force-app/main/default/objects/Account/fields/X6_to_11_months__c.field-meta.xml
<CustomField>
    <fullName>X6_to_11_months__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Electric plans with term lengths from 6 to 11 months.</description>
    <inlineHelpText>Electric plans with term lengths from 6 to 11 months.</inlineHelpText>
    <label>6 to 11 months</label>
    <type>Checkbox</type>
</CustomField>