force-app/main/default/objects/Account/fields/Year_weight__c.field-meta.xml
<CustomField>
    <fullName>Year_weight__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Weighting factor of the REP&#39;s years in service.</description>
    <inlineHelpText>Weighting factor of the REP&#39;s years in service.</inlineHelpText>
    <label>Year weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>