force-app/main/default/objects/Account/recordTypes/CES_Location.recordType-meta.xml
<RecordType>
    <fullName>CES_Location</fullName>
    <active>true</active>
    <label>CES Location</label>
</RecordType>