force-app/main/default/objects/Account/recordTypes/CNP_CI_Division.recordType-meta.xml
<RecordType>
    <fullName>CNP_CI_Division</fullName>
    <active>true</active>
    <description>Continuous Improvement - CNP operating division (Gas, Electric, Business Support, etc)</description>
    <label>CNP CI Division</label>
</RecordType>