force-app/main/default/objects/Account/recordTypes/CNP_CI_Internal_Account.recordType-meta.xml
<RecordType>
    <fullName>CNP_CI_Internal_Account</fullName>
    <active>true</active>
    <description>For classification of internal CNP Continuous Improvement contacts</description>
    <label>CNP CI Internal Account</label>
</RecordType>