force-app/main/default/objects/Account/recordTypes/Community_Organization.recordType-meta.xml
<RecordType>
    <fullName>Community_Organization</fullName>
    <active>true</active>
    <description>Groups that CNP may interact with for community relations</description>
    <label>Community Organization</label>
</RecordType>