force-app/main/default/objects/Account/recordTypes/Consultant.recordType-meta.xml
<RecordType>
    <fullName>Consultant</fullName>
    <active>true</active>
    <description>Brokers, Consultants, and other channel partners.</description>
    <label>Consultant</label>
</RecordType>