force-app/main/default/objects/Account/recordTypes/Internal_Account.recordType-meta.xml
<RecordType>
    <fullName>Internal_Account</fullName>
    <active>true</active>
    <description>one of our company&#39;s internal business units (ex. CES, CEIP)</description>
    <label>Internal Account</label>
</RecordType>