force-app/main/default/objects/Account/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>An account that does not yet fit into another category, or fits into multiple.</description>
    <label>Generic</label>
</RecordType>