force-app/main/default/objects/Account/recordTypes/Partner_Vendor.recordType-meta.xml
<RecordType>
    <fullName>Partner_Vendor</fullName>
    <active>true</active>
    <description>Partners and/or vendors that provide services or business support.</description>
    <label>Partner/Vendor</label>
</RecordType>