force-app/main/default/objects/Account/recordTypes/Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Pipeline</fullName>
    <active>true</active>
    <description>a company that is a Pipeline</description>
    <label>Pipeline</label>
</RecordType>