force-app/main/default/objects/Account/recordTypes/Producer_Services_Account.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Account</fullName>
    <active>true</active>
    <label>Producer Services Account</label>
</RecordType>