force-app/main/default/objects/Account/recordTypes/Producer_Services_Royalty_Owner.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Royalty_Owner</fullName>
    <active>false</active>
    <description>Royalty Owners related to a Well Ownership</description>
    <label>Producer Services Royalty Owner</label>
</RecordType>