force-app/main/default/objects/Account/recordTypes/SourceGas_Umbrella_Account.recordType-meta.xml
<RecordType>
    <fullName>SourceGas_Umbrella_Account</fullName>
    <active>true</active>
    <description>An account that owns a group of person accounts in the SourceGas Choice Program</description>
    <label>SourceGas Umbrella Account</label>
</RecordType>