force-app/main/default/objects/Account/recordTypes/Utility.recordType-meta.xml
<RecordType>
    <fullName>Utility</fullName>
    <active>true</active>
    <description>A Company that is an LDC or TDSP</description>
    <label>Utility</label>
</RecordType>